# bybit-crypto-trader

./: README.md  pyproject.toml
configs/: default.toml
data/normalized/: funding_BTCUSDT.jsonl  funding_DOGEUSDT.jsonl  funding_ETHUSDT.jsonl  funding_RAVEUSDT.jsonl  funding_SOLUSDT.jsonl  kline_BTCUSDT.jsonl  kline_DOGEUSDT.jsonl  kline_ETHUSDT.jsonl  kline_RAVEUSDT.jsonl  kline_SOLUSDT.jsonl  linear_instruments.jsonl  option_chain.jsonl
data/raw/: funding_BTCUSDT_raw.jsonl  funding_DOGEUSDT_raw.jsonl  funding_ETHUSDT_raw.jsonl  funding_RAVEUSDT_raw.jsonl  funding_SOLUSDT_raw.jsonl  kline_BTCUSDT_raw.jsonl  kline_DOGEUSDT_raw.jsonl  kline_ETHUSDT_raw.jsonl  kline_RAVEUSDT_raw.jsonl  kline_SOLUSDT_raw.jsonl  linear_tickers_raw.jsonl  option_chain_raw.jsonl
notebooks/: 01_research_and_backtest.ipynb  02_runner_controls.ipynb
src/bybit_trader/: __init__.py  _local_demo_credentials.py  analytics.py  backtest.py  config.py  data.py  demo_credentials.py  exchange.py  historical.py  models.py  risk.py  runner.py  session.py  strategies.py  verification.py
tests/: test_core.py  test_credentials_analytics.py  test_live_demo.py  test_live_public.py  test_verification.py
